--- a/templates/syncserver.ini
+++ b/templates/syncserver.ini
@@ -2,8 +2,8 @@
 #
 [server:main]
 use = {{ mozsync_use[mozsync_webserver] }}
-host = {{ mozsync_listen_host }}
-port = {{ mozsync_port }}
+host = {{ mozsync_internal_host }}
+port = {{ mozsync_internal_port }}
 {% if mozsync_webserver == 'gunicorn' %}
 workers = {{ mozsync_gunicorn_workers }}
 timeout = {{ mozsync_gunicorn_timeout }}
